# rusty-tuber

./: Cargo.toml  README.md
.github/workflows/: cargo_doc.yml  cargo_test.yml  cargo_test.yml_  rust.yml
src/: command.rs  config.rs  context.rs  display_style.rs  engine.rs  env.rs  environment.rs  eval.rs  evaluate.rs  expr.rs  expression.rs  func.rs  function.rs  history.rs  identifier.rs  lib.rs  main.rs  parser.rs
src/command/: display.rs
src/command/display/: ecmascript.rs  lazy_k.rs
src/context/: default.rs  display.rs
src/expr/: apply.rs  free_vars.rs  parser.rs  substitute.rs
src/expression/: apply.rs  display.rs  free_vars.rs  parser.rs  substitute.rs  unlambda.rs
src/expression/display/: ecmascript.rs  lazy_k.rs
src/function/: display.rs
src/function/display/: ecmascript.rs  lazy_k.rs
src/parser/: command.rs  expression.rs  identifier.rs
src/parser/command/: ecmascript.rs  lazy_k.rs
src/parser/expression/: ecmascript.rs
