[package]
name = "tuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"
combine = "4.6.6"
clap = { version = "4.3.19", features = ["derive"] }
home-dir = "0.1.0"
glob = "0.3.1"
ulid = "1.0.0"
